# web

./: .gitignore  cat.web  category.res  product.res  prog.cog  prog.res  res.vim  test.res1  test.web  ui.cog  ui.res  web.cabal
res0/: Graph.hs  Interpreter.hs  Main.hs  Parse.hs  test.web  ui.res
res1/: Context.hs  Graph.hs  Main.hs  Parse.hs  Parser.hs  Run.hs  Types.hs
res2/: Base.hs  Syntax.hs  Tree2.hs  Types.hs  Unification.hs  exercises1  exercises2
server-src/: Main.hs
src/: Check.hs  Extern.hs  Graph.hs  Interpreter.hs  Main.hs  Parse.hs  Parser.hs  Rewrite.hs  Sub.hs  Types.hs  Web.hs
static/: index.html  main.js  parsing.js  ui.js
