name:                web
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Scott Kovach
maintainer:          dskovach@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable res0
  --exposed-modules:     Interpreter, Graph, Types, Parse, Parser
  main-is:             Main.hs
  other-modules:       Extern
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       aeson,
                       mtl,
                       text-server, utf8-string, text, bytestring
  hs-source-dirs:      res0
  default-language:    Haskell2010

executable res1
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       containers,
                       mtl
  hs-source-dirs:      res1
  default-language:    Haskell2010


executable server
  main-is:            Main.hs
  build-depends:      base >=4.8 && <4.9,
                      web, text-server,
                      utf8-string, text, bytestring, aeson
  hs-source-dirs:     server-src
